# ToDoAppCpp

./: .gitignore  CMakeLists.txt
include/: list.hpp  task.hpp
src/: list.cpp  main.cpp  task.cpp
